add text and images to template

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -29,7 +29,7 @@
         </header>
 
         <main>
-           <section class="section-about">
+           <section class="section-about" id="section-tours">
                <div class="u-center-text u-margin-bottom-big">
                    <h2 class="heading-secondary">
                    Exciting tours for adveturous people
@@ -40,20 +40,62 @@
                 <div class="col-1-of-2">
                     <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
                     <p class="paragraph">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem earum eum id labore accusantium enim aliquid consequuntur! Labore expedita rem dolor laudantium, fugiat beatae facilis, sapiente doloremque, sint autem quibusdam.
-                    </p>
+A moment of happiness,
+
+you and I sitting on the verandah,
+
+apparently two, but one in soul, you and I.
+
+We feel the flowing water of life here,
+
+you and I, with the garden’s beauty
+
+and the birds singing.
+
+The stars will be watching us,
+
+and we will show them
+
+what it is to be a thin crescent moon.
+
+You and I unselfed, will be together,
+
+indifferent to idle speculation, you and I.
+
+The parrots of heaven will be cracking sugar
+
+as we laugh together, you and I.
+
+In one form upon this earth,
+
+and in another form in a timeless sweet land.
+
+Kulliyat-e Shams, 2114                    </p>
 
                     <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
                     <p class="paragraph">
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim ad quidem incidunt velit veritatis, dicta officia natus impedit sequi.
-                    </p>
+The springtime of Lovers has come,
+
+that this dust bowl may become a garden;
+
+the proclamation of heaven has come,
+
+that the bird of the soul may rise in flight.
+
+The sea becomes full of pearls,
+
+the salt marsh becomes sweet as kauthar,
+
+the stone becomes a ruby from the mine,
+
+the body becomes wholly soul.                    </p>
 
                    <a href="#" class="btn-text">Learn more &rarr;</a>
             
 
                 </div>
                 <div class="col-1-of-2">
-                    image placeholder 
+                    <img class ="expedition-main-image" src="./img/dinasaurs.jpeg" alt="dinasaurs expedition">
                 </div>
             </div>
                
