--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -40,55 +40,11 @@
                 <div class="col-1-of-2">
                     <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
                     <p class="paragraph">
-A moment of happiness,
-
-you and I sitting on the verandah,
-
-apparently two, but one in soul, you and I.
-
-We feel the flowing water of life here,
-
-you and I, with the garden’s beauty
-
-and the birds singing.
-
-The stars will be watching us,
-
-and we will show them
-
-what it is to be a thin crescent moon.
-
-You and I unselfed, will be together,
-
-indifferent to idle speculation, you and I.
-
-The parrots of heaven will be cracking sugar
-
-as we laugh together, you and I.
-
-In one form upon this earth,
-
-and in another form in a timeless sweet land.
-
-Kulliyat-e Shams, 2114                    </p>
+                      Ipsum dolor sit amet consectetur adipisicing elit. Sint ut natus veritatis cupiditate et error sit, officiis, expedita nisi quas deserunt quis aut voluptatibus placeat? Explicabo perferendis ratione suscipit veritatis!
+</p>
 
                     <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
-                    <p class="paragraph">
-The springtime of Lovers has come,
-
-that this dust bowl may become a garden;
-
-the proclamation of heaven has come,
-
-that the bird of the soul may rise in flight.
-
-The sea becomes full of pearls,
-
-the salt marsh becomes sweet as kauthar,
-
-the stone becomes a ruby from the mine,
-
-the body becomes wholly soul.                    </p>
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam ipsam officiis itaque, eaque modi ratione quidem, ab, quisquam quasi quibusdam reiciendis nostrum? Blanditiis, saepe vel itaque est illum architecto voluptatem.</p>
 
                    <a href="#" class="btn-text">Learn more &rarr;</a>
             
