--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -44,14 +44,18 @@
 </p>
 
                     <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
-                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam ipsam officiis itaque, eaque modi ratione quidem, ab, quisquam quasi quibusdam reiciendis nostrum? Blanditiis, saepe vel itaque est illum architecto voluptatem.</p>
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam ipsam officiis itaque, eaque modi ratione quidem.</p>
 
                    <a href="#" class="btn-text">Learn more &rarr;</a>
             
-
                 </div>
                 <div class="col-1-of-2">
-                    <img class ="expedition-main-image" src="./img/dinasaurs.jpeg" alt="dinasaurs expedition">
+                  <div class="composition">
+                    <img src="img/nat-1-large.jpg" alt="nat1" class="composition__photo composition__photo--p1">
+                    <img src="img/nat-2-large.jpg" alt="nat2" class="composition__photo composition__photo--p2">
+                    <img src="img/nat-3-large.jpg" alt="nat3" class="composition__photo composition__photo--p3">
+                  </div>
+                    <!-- <img class ="expedition-main-image" src="./img/dinasaurs.jpeg" alt="dinasaurs expedition"> -->
                 </div>
             </div>
                
